Fixed issues found by FindBugs.