@@ -34,9 +34,9 @@ public class WordUtil
 
 	static
 	{
-		splitChar.add( new Character( ' ' ) );
-		splitChar.add( new Character( '\r' ) );
-		splitChar.add( new Character( '\n' ) );
+		splitChar.add( Character.valueOf( ' ' ) );
+		splitChar.add( Character.valueOf( '\r' ) );
+		splitChar.add( Character.valueOf( '\n' ) );
 	};
 
 	public static final double INCH_PT = 72;
@@ -150,7 +150,7 @@ public class WordUtil
 		char[] array = text.toCharArray( );
 		for ( int i = 0; i < array.length; i++ )
 		{
-			Character c = new Character( text.charAt( i ) );
+			Character c = text.charAt( i );
 			if ( splitChar.contains( c ) )
 				capitalizeNextChar = true;
 			else if ( capitalizeNextChar )
